--- a/index.html
+++ b/index.html
@@ -1778,6 +1778,10 @@ export class Welcome {
                 </section>
                 <section>
                     <h4>Version 1 is coming soon and it's worth a view you figure out if Aurelia is right for you!</h4>
+                 <h4> Examples</li>
+         <li> http://www.brookbridgeinc.com</li>
+         <li> http://gallery.meledandri.com</li>
+       
                 </section>
             </section>
 
