--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </p>
             </section>
             <section>
-                <h2>Why this Talk</h2>
+                <h2>Why this Talk </h2>
                 <hr>
                 <h2 style="color:grey">Learn ES2015, Quickly</h2>
                 <hr>
@@ -81,16 +81,26 @@
             <!-- BEGIN Michael: what the hell is this about, even -->
             <section>
                 <section>
-                    <h2>Why this Talk</h2>
+                    <h2>Why this Talk </h2>
+                         <ul>
+                               <li>
+                           Condenesed History: Pick System (many vairations), Revelation, Access, Firebird, Delphi, C# (asp.net), Angular, Mongodb, Aurelia, React-Native
+                        </li>
+                        <li>
+                            I thought my MEANS stack was my last stack (Mongo,Express,Angular,Node,Sails)
+                        </li>
+                         </ul>
                     <!--<img width="50%" height="auto" data-src="images/riddler.jpg" alt="The Riddler"
 							style="border: none; background: none; box-shadow: none;">
                           -->
 
-                    <video preload="auto" width="1920" height="800" loop autoplay muted>
+                    <!--<video preload="auto" width="1920" height="800" loop autoplay muted>
                         <source src="videos/gett.mp4" type="video/mp4">
-                    </video>
-
-
+                    </video>-->
+                  
+<!--<iframe width="512" height="288" src="http://www.hulu.com/embed.html?eid=8lf-gihy04sddzmd9e0cuw&et=141&st=137&it=i1287" frameborder="0" scrolling="no" webkitAllowFullScreen mozallowfullscreen allowfullscreen></iframe>-->
+<!--<iframe width="512" height="288" src="https://gifs.com/gif/qx8z8r" frameborder="0" scrolling="no" webkitAllowFullScreen mozallowfullscreen allowfullscreen></iframe>-->
+<iframe src="https://gifs.com/embed/qx8z8r" frameborder="0" scrolling="no" width='480' height='270' style="-webkit-backface-visibility: hidden;-webkit-transform: scale(1);" ></iframe>
                     <aside class="notes">
                         <p>
                             Seriously, do we really need to talk about another framework? Well after going to many Angular meetups, it became apparent
@@ -104,6 +114,7 @@
                 <section>
                     <h2>Frameworks aim to solve the same problems</h2>
                     <ul>
+                      
                         <li>
                             Components
                         </li>
@@ -172,7 +183,7 @@
 
             <!-- BEGIN Sean: ES2015 Overview -->
             <section>
-                <h2 style="color:grey">Why this Talk</h2>
+                <h2 style="color:grey">Why this Talk </h2>
                 <hr>
                 <h2>Learn ES2015, Quickly</h2>
                 <hr>
@@ -662,7 +673,7 @@ script.next().value.then((r) => {
 
             <!-- BEGIN Phil: Aurelia Overview -->
             <section>
-                <h2 style="color:grey">Why this Talk</h2>
+                <h2 style="color:grey">Why this Talk </h2>
                 <hr>
                 <h2 style="color:grey">Learn ES2015, Quickly</h2>
                 <hr>
@@ -735,7 +746,7 @@ script.next().value.then((r) => {
 
             <!-- BEGIN Daniela: Aurelia vs Angular -->
             <section>
-                <h2 style="color:grey">Why this Talk</h2>
+                <h2 style="color:grey">Why this Talk </h2>
                 <hr>
                 <h2 style="color:grey">Learn ES2015, Quickly</h2>
                 <hr>
@@ -1338,7 +1349,7 @@ export class ChildViewModel {
 
             <!-- BEGIN Kent: Aurelia vs React -->
             <section>
-                <h2 style="color:grey">Why this Talk</h2>
+                <h2 style="color:grey">Why this Talk </h2>
                 <hr>
                 <h2 style="color:grey">Learn ES2015, Quickly</h2>
                 <hr>
@@ -1430,7 +1441,7 @@ export class ChildViewModel {
 
             <!-- BEGIN Mike: Aurelia vs Ember -->
             <section>
-                <h2 style="color:grey">Why this Talk</h2>
+                <h2 style="color:grey">Why this Talk </h2>
                 <hr>
                 <h2 style="color:grey">Learn ES2015, Quickly</h2>
                 <hr>
