--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
                                 Never felt the ng2 message was strong nor coherent
                             </li>
                             <li>
-                                a nodejs engeneer suggested I look into jspm
+                                a nodejs engeneer suggested I look into jspm. Many meetups had mashed up angular ideas.
                             </li>
                             <li>
                                 AS long as I was going to change and the migration path from ng1 to ng2 was not clear, I chose what I considered the easier
-                                path
+                                path. 
                             </li>
 
                     </aside>
@@ -152,8 +152,9 @@
                             <li>
                                 Looked a couple of other frameworks and felt Aurelia was the simpliest to transition
                             </li>
+                           
                             <li>
-                                Have used Aurelia sinde June 2015 and have 2 apps in production
+                                Have used Aurelia sinde June 2015 and have >2 apps in production
                             </li>
                         </ul>
                     </aside>
@@ -162,6 +163,12 @@
                     <h2>Why Did We Choose Aurelia?</h2>
                     <aside class="notes">
                         <ul>
+                             <li>
+                               Was familiar with Rob Eisenberg's work from silverlight days.
+                            </li>
+                              <li>
+                               Loved the convention over configuration widely used in Sailsjs.
+                            </li>
                             <li>
                                 Uses ES2015/2016, ensuring that we are building apps that won't be outdated in a year (or less)
                             </li>
@@ -169,7 +176,7 @@
                                 It's *JUST* JavaScript - no JSX, no extending framework classes
                             </li>
                             <li>
-                                Fanstastice skeleton apps to get you up quickly
+                                Fanstastic skeleton apps to get you up quickly
                             </li>
                             <li>
                                 Beat feature - we aren't locked in
@@ -1801,10 +1808,13 @@ export class Welcome {
                     <h2 class="extra-large">What's Next?</h2>
                 </section>
                 <section>
+                    <h4>Take-away  There is no such thing as the Last Stack!</h4>
                     <h4>Version 1 is coming soon and it's worth a view you figure out if Aurelia is right for you!</h4>
                     <h4> Examples</li>
          <li> http://www.brookbridgeinc.com</li>
          <li> http://gallery.meledandri.com</li>
+         <li> http://www.gtz.com:9020</li>
+         <li> http://www.gtz.com:9025</li>
        
                 </section>
             </section>
