--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@ script.next().value.then((r) => {
                                 <small class="fragment"><em>** Presenter does not officially endorse JSPM</em></small>
                             </li>
                             <li class="fragment">
-                                <div>Materializecss / Kendo-ui /Highcharts - integratiion</div>
+                                <div>Materializecss / Kendo-ui /Highcharts - integration</div>
                                 <div><small><em class="fragment">**https://github.com/aurelia-ui-toolkits/aurelia-materialize-bridge</em></small></div>
                                 <small class="fragment"><em>**https://github.com/aurelia-ui-toolkits/aurelia-kendoui-bridge</em></small>
                             </li>
