--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     </aside>
                 </section>
                 <section>
-                    <h2>Why Did We Choose Aurelia?</h2>
+                    <h2>Why Did I Choose Aurelia?</h2>
                     <aside class="notes">
                         <ul>
                              <li>
