--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
                 </section>
                 <section>
                     <h2>Why Did I Choose Aurelia?</h2>
+                    <section>
                     <aside class="notes">
                         <ul>
                              <li>
@@ -187,7 +188,7 @@
                         </ul>
                     </aside>
                 </section>
-            
+             </section>
 
             <!-- BEGIN Sean: ES2015 Overview -->
             <section>
