--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                 <section>
                     <h2>We want to share our experiences</h2>
                     <img width="50%" height="auto" data-src="images/sharing.jpg" alt="The Riddler" style="border: none; background: none; box-shadow: none;">
+                     <section>
                     <aside class="notes">
                         <ul>
                             <li>
@@ -158,6 +159,7 @@
                             </li>
                         </ul>
                     </aside>
+                      </section>
                 </section>
                 <section>
                     <h2>Why Did I Choose Aurelia?</h2>
