--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                 Now, let's start with the ES2015-2016 overview!
                             </li>
                         </ul>
-
+ </section>
                   
                 </section>
                 <!-- BEGIN Sean: ES2015 Overview -->
