--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@ export class Users {
                     </section>
 
                     <section data-state="angular-compare-db">
-                        <h2>Data Binding</h2>
+                        <h2>Data Binding 1/2</h2>
                         <table>
                             <col width="50%">
                                 <col width="50%">
@@ -1000,6 +1000,15 @@ export class Users {
                                         <td class="fragment" data-fragment-index="3">Want more control? <code>.one-way</code>, <code>.two-way</code>, <code>.one-time</code>.</td>
                                         <td class="fragment" data-fragment-index="7">Each binding adds a watcher on the <code>$scope</code> model.</td>
                                     </tr>
+                                 
+                        </table>
+                    </section>
+ <section data-state="angular-compare-db">
+                        <h2>Data Binding 2/2 </h2>
+                        <table>
+                            <col width="50%">
+                                <col width="50%">
+                              
                                     <tr>
                                         <td class="fragment" data-fragment-index="4"><a href="https://github.com/aurelia/documentation/blob/master/English/docs.md#adaptive-binding">Adaptive Binding</a>                                            picks optimal observation strategy &amp; minimizes dirty checking.</td>
                                         <td class="fragment" data-fragment-index="8">Built in directives trigger digest cycle on scope model changes (dirty checking).</td>
@@ -1012,7 +1021,6 @@ export class Users {
                                     </tr>
                         </table>
                     </section>
-
                     <section data-state="angular-compare-db-code">
                         <h2>Data Binding Examples</h2>
                         <table>
