--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,10 @@ export class Users {
                         <table>
                             <col width="50%">
                                 <col width="50%">
-                              
+                                <tr>
+                                        <th><img src="images/aurelia-logo.png" alt="Aurelia logo"></th>
+                                        <th><img src="images/angular-logo-light.png" alt="Angular logo"></th>
+                                    </tr>
                                     <tr>
                                         <td class="fragment" data-fragment-index="4"><a href="https://github.com/aurelia/documentation/blob/master/English/docs.md#adaptive-binding">Adaptive Binding</a>                                            picks optimal observation strategy &amp; minimizes dirty checking.</td>
                                         <td class="fragment" data-fragment-index="8">Built in directives trigger digest cycle on scope model changes (dirty checking).</td>
