--- a/index.html
+++ b/index.html
@@ -1018,9 +1018,13 @@ export class Users {
                                     </tr>
                                     <tr>
                                         <th></th>
-                                        <td class="fragment" data-fragment-index="5"><img src="images/aurelia-logo.png" alt="Aurelia logo"></td>
                                         <td class="fragment" data-fragment-index="9">Recent angular meetup an excellent presentation by Yakov Fain .</td>
-
+                                        <td></td>
+                                        <td class="fragment" data-fragment-index="9"> http://www.meetup.com/AngularJS-NYC/events/229416369/</td>
+                                        <td></td>
+                                         <td class="fragment" data-fragment-index="9"> non standard markup  [()] </td>
+                                        <td></td>
+                                      
                                     </tr>
                         </table>
                     </section>
