--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,8 @@ export class Users {
                                         <td class="fragment" data-fragment-index="3">Want more control? <code>.one-way</code>, <code>.two-way</code>, <code>.one-time</code>.</td>
                                         <td class="fragment" data-fragment-index="7">Each binding adds a watcher on the <code>$scope</code> model.</td>
                                     </tr>
-                                 
+                                 </col>
+                                 </col>
                         </table>
                     </section>
  <section data-state="angular-compare-db">
@@ -1026,6 +1027,8 @@ export class Users {
                                         <td></td>
                                       
                                     </tr>
+                                    </col>
+                                 </col>
                         </table>
                     </section>
                     <section data-state="angular-compare-db-code">
