--- a/index.html
+++ b/index.html
@@ -1004,6 +1004,31 @@ export class Users {
                                  </col>
                         </table>
                     </section>
+                        <section data-state="angular-compare-db">
+                        <h2>Data Binding 2/2</h2>
+                        <table>
+                            <col width="50%">
+                                <col width="50%">
+                                    <tr>
+                                        <th><img src="images/aurelia-logo.png" alt="Aurelia logo"></th>
+                                        <th><img src="images/angular-logo-light.png" alt="Angular logo"></th>
+                                    </tr>
+                                    <tr>
+                                        <td class="fragment" data-fragment-index="1">Append <code>.bind</code> to any html or custom attribute.</td>
+                                        <td class="fragment" data-fragment-index="5">Uses Angular-specific custom attributes.</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="fragment" data-fragment-index="2">Defaults to two-way for &lt;input&gt;, one-way for everything else.</td>
+                                        <td class="fragment" data-fragment-index="6">Two-way all the time, except for custom directives.</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="fragment" data-fragment-index="3">Want more control? <code>.one-way</code>, <code>.two-way</code>, <code>.one-time</code>.</td>
+                                        <td class="fragment" data-fragment-index="7">Each binding adds a watcher on the <code>$scope</code> model.</td>
+                                    </tr>
+                                 </col>
+                                 </col>
+                        </table>
+                    </section>
  <section data-state="angular-compare-db">
                         <h2>Data Binding 2/2 </h2>
                         <table>
@@ -1020,11 +1045,11 @@ export class Users {
                                     <tr>
                                         <th></th>
                                         <td class="fragment" data-fragment-index="9">Recent angular meetup an excellent presentation by Yakov Fain .</td>
-                                        <td></td>
+                                        <td>1</td>
                                         <td class="fragment" data-fragment-index="9"> http://www.meetup.com/AngularJS-NYC/events/229416369/</td>
-                                        <td></td>
+                                        <td>2</td>
                                          <td class="fragment" data-fragment-index="9"> non standard markup  [()] </td>
-                                        <td></td>
+                                        <td>3</td>
                                       
                                     </tr>
                                     </col>
